--- a/index.html
+++ b/index.html
@@ -29,22 +29,26 @@
       <div class="supervisor">
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
+        <img src="./images/icon-supervisor.svg" alt="supervisor">
       </div>
       
       <div class="middle-stack">
         <div class="team-builder">
           <h2>Team Builder</h2>
           <p>Scans our talent network to create the optimal team for your project</p>
+          <img src="./images/icon-team-builder.svg" alt="team-builder">
         </div>
         <div class="karma">
           <h2>Karma</h2>
           <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="./images/icon-karma.svg" alt="karma">
         </div>
       </div>
 
       <div class="calculator">
         <h2>Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="./images/icon-calculator.svg" alt="calculator">
       </div>
 
     </section>
