Added required flexbox

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <main>
+  <main class="flex-container flex-direction-column flex-container-in-center">
 
     <header>
       <h1>Reliable, efficient delivery <br> <span>Powered by Technology</span>
@@ -25,14 +25,14 @@
     </header>
 
 
-    <section>
+    <section class="flex-container flex-container-in-center cards">
       <div class="supervisor">
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
         <img src="./images/icon-supervisor.svg" alt="supervisor">
       </div>
       
-      <div class="middle-stack">
+      <div class="flex-container flex-direction-column middle-stack">
         <div class="team-builder">
           <h2>Team Builder</h2>
           <p>Scans our talent network to create the optimal team for your project</p>
