--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <main class="flex-container flex-direction-column flex-container-in-center">
+  <main class="flex-container flex-direction-column flex-container-in-center ht-100">
 
     <header>
       <h1>Reliable, efficient delivery <br> <span>Powered by Technology</span>
@@ -26,26 +26,26 @@
 
 
     <section class="flex-container flex-container-in-center cards">
-      <div class="supervisor">
+      <div class="card supervisor">
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
         <img src="./images/icon-supervisor.svg" alt="supervisor">
       </div>
       
       <div class="flex-container flex-direction-column middle-stack">
-        <div class="team-builder">
+        <div class="card team-builder">
           <h2>Team Builder</h2>
           <p>Scans our talent network to create the optimal team for your project</p>
           <img src="./images/icon-team-builder.svg" alt="team-builder">
         </div>
-        <div class="karma">
+        <div class="card karma">
           <h2>Karma</h2>
           <p>Regularly evaluates our talent to ensure quality</p>
-          <img src="./images/icon-karma.svg" alt="karma">
+          <img src="./images/icon-karma.svg" alt="Karma">
         </div>
       </div>
 
-      <div class="calculator">
+      <div class="card calculator">
         <h2>Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src="./images/icon-calculator.svg" alt="calculator">
